--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "devDependencies": {
     "@atlaskit/tree": "^8.6.2",
     "@floating-ui/react-dom-interactions": "^0.9.3",
+    "@tanstack/react-table": "^8.5.13",
+    "@tanstack/react-virtual": "v3.0.0-beta.18",
     "@vitejs/plugin-react": "^2.1.0",
     "copy-to-clipboard": "^3.3.2",
     "fomantic-ui-less": "^2.8.7",
@@ -23,6 +25,7 @@
     "react-semantic-toasts": "^0.6.5",
     "react-table": "^7.8.0",
     "react-virtuoso": "^2.18.0",
+    "sass": "^1.52.2",
     "semantic-ui-react": "^2.0.3",
     "styled-components": "^5.3.5",
     "vite": "^3.1.1"
