--- a/.mergify.yml
+++ b/.mergify.yml
@@ -15,6 +15,7 @@ pull_request_rules:
   - status-success=Build and Test (ubuntu-latest, 3.2.0, temurin@17, rootCore)
   - status-success=Build and Test (ubuntu-latest, 3.2.0, temurin@17, rootGridLayout)
   - status-success=Build and Test (ubuntu-latest, 3.2.0, temurin@17, rootDraggable)
+  - status-success=Build and Test (ubuntu-latest, 3.2.0, temurin@17, rootFloatingui)
   - status-success=Build and Test (ubuntu-latest, 3.2.0, temurin@17, rootClipboard)
   - status-success=Build and Test (ubuntu-latest, 3.2.0, temurin@17, rootVirtuoso)
   - status-success=Build and Test (ubuntu-latest, 3.2.0, temurin@17, rootTable)
@@ -94,6 +95,14 @@ pull_request_rules:
     label:
       add:
       - draggable
+      remove: []
+- name: Label floatingui PRs
+  conditions:
+  - files~=^floatingui/
+  actions:
+    label:
+      add:
+      - floatingui
       remove: []
 - name: Label font-awesome PRs
   conditions:
@@ -238,6 +247,14 @@ pull_request_rules:
     label:
       add:
       - rootDraggable
+      remove: []
+- name: Label rootFloatingui PRs
+  conditions:
+  - files~=^rootFloatingui/
+  actions:
+    label:
+      add:
+      - rootFloatingui
       remove: []
 - name: Label rootGridLayout PRs
   conditions:
@@ -389,6 +406,7 @@ pull_request_rules:
   - status-success=Build and Test (ubuntu-latest, 3.2.0, temurin@17, rootCore)
   - status-success=Build and Test (ubuntu-latest, 3.2.0, temurin@17, rootGridLayout)
   - status-success=Build and Test (ubuntu-latest, 3.2.0, temurin@17, rootDraggable)
+  - status-success=Build and Test (ubuntu-latest, 3.2.0, temurin@17, rootFloatingui)
   - status-success=Build and Test (ubuntu-latest, 3.2.0, temurin@17, rootClipboard)
   - status-success=Build and Test (ubuntu-latest, 3.2.0, temurin@17, rootVirtuoso)
   - status-success=Build and Test (ubuntu-latest, 3.2.0, temurin@17, rootTable)
