--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
     "@atlaskit/tree": "^8.6.2",
+    "@floating-ui/react-dom-interactions": "^0.9.3",
     "@vitejs/plugin-react": "^2.1.0",
     "copy-to-clipboard": "^3.3.2",
     "fomantic-ui-less": "^2.8.7",
