--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
         os: [ubuntu-latest]
         scala: [3.2.1-RC2]
         java: [temurin@17]
-        project: [rootCore, rootGridLayout, rootDraggable, rootFloatingui, rootClipboard, rootVirtuoso, rootTable, rootTanstackTable, rootHighcharts, rootDatepicker, rootBeautifulDnd, rootTree, rootSemanticUI, fontAwesome, rootHotkeys, rootResizable, rootPrimeReact, circularProgressbar, moon]
+        project: [rootCore, rootGridLayout, rootDraggable, rootFloatingui, rootClipboard, rootTanstackTable, rootHighcharts, rootDatepicker, rootBeautifulDnd, rootTree, rootSemanticUI, fontAwesome, rootHotkeys, rootResizable, rootPrimeReact, circularProgressbar, moon]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout current branch (full)
