--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,7 +72,7 @@ jobs:
           node-version: 18
           cache: npm
 
-      - run: npm install
+      - run: yarn install --immutable
 
       - name: Check that workflows are up to date
         run: sbt githubWorkflowCheck
