--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,7 +72,7 @@ jobs:
           node-version: 18
           cache: yarn
 
-      - run: yarn install --immutable
+      - run: yarn install --frozen-lockfile
 
       - name: Check that workflows are up to date
         run: sbt githubWorkflowCheck
