--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
         os: [ubuntu-latest]
         scala: [3]
         java: [temurin@17]
-        project: [rootCore, rootGridLayout, rootDraggable, rootFloatingui, rootClipboard, rootTanstackTable, rootHighcharts, rootDatepicker, rootBeautifulDnd, fontAwesome, rootHotkeys, rootResizable, rootPrimeReact, circularProgressbar, moon]
+        project: [rootCore, rootGridLayout, rootDraggable, rootFloatingui, rootClipboard, rootTanstackTable, rootHighcharts, rootDatepicker, rootBeautifulDnd, fontAwesome, rootHotkeys, rootResizable, rootPrimeReact, circularProgressbar, moon, markdown]
     runs-on: ${{ matrix.os }}
     timeout-minutes: 60
     steps:
