--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "semantic-ui-react": "^2.1.4",
     "styled-components": "^5.3.10",
     "typescript": "^5.1.5",
-    "vite": "^4.3.9"
+    "vite": "^4.3.9",
+    "rehype-katex": "^6.0.3",
+    "remark-gfm": "^3.0.1",
+    "remark-math": "^5.1.1"
   }
 }
