--- a/.mergify.yml
+++ b/.mergify.yml
@@ -22,7 +22,7 @@ pull_request_rules:
   - status-success=Build and Test (ubuntu-latest, 3, temurin@17, rootHighcharts)
   - status-success=Build and Test (ubuntu-latest, 3, temurin@17, rootDatepicker)
   - status-success=Build and Test (ubuntu-latest, 3, temurin@17, rootBeautifulDnd)
-  - status-success=Build and Test (ubuntu-latest, 3, temurin@17, fontAwesome)
+  - status-success=Build and Test (ubuntu-latest, 3, temurin@17, rootFontAwesome)
   - status-success=Build and Test (ubuntu-latest, 3, temurin@17, rootHotkeys)
   - status-success=Build and Test (ubuntu-latest, 3, temurin@17, rootResizable)
   - status-success=Build and Test (ubuntu-latest, 3, temurin@17, rootPrimeReact)
@@ -262,6 +262,14 @@ pull_request_rules:
       add:
       - rootFloatingui
       remove: []
+- name: Label rootFontAwesome PRs
+  conditions:
+  - files~=^rootFontAwesome/
+  actions:
+    label:
+      add:
+      - rootFontAwesome
+      remove: []
 - name: Label rootGridLayout PRs
   conditions:
   - files~=^rootGridLayout/
@@ -346,7 +354,7 @@ pull_request_rules:
   - status-success=Build and Test (ubuntu-latest, 3, temurin@17, rootHighcharts)
   - status-success=Build and Test (ubuntu-latest, 3, temurin@17, rootDatepicker)
   - status-success=Build and Test (ubuntu-latest, 3, temurin@17, rootBeautifulDnd)
-  - status-success=Build and Test (ubuntu-latest, 3, temurin@17, fontAwesome)
+  - status-success=Build and Test (ubuntu-latest, 3, temurin@17, rootFontAwesome)
   - status-success=Build and Test (ubuntu-latest, 3, temurin@17, rootHotkeys)
   - status-success=Build and Test (ubuntu-latest, 3, temurin@17, rootResizable)
   - status-success=Build and Test (ubuntu-latest, 3, temurin@17, rootPrimeReact)
