--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "devDependencies": {
-    "@floating-ui/react-dom-interactions": "^0.13.3",
+    "@floating-ui/react": "^0.25.4",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@tanstack/react-table": "^8.10.1",
