--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react-grid-layout": "^1.4.4",
     "react-hotkeys-hook": "4.4.4",
     "react-resizable": "^3.0.5",
-    "react-resize-detector": "^8.1.0",
+    "react-resize-detector": "^9.1.2-beta.0",
     "react-semantic-toasts": "^0.6.5",
     "react-table": "^7.8.0",
     "react-virtuoso": "^4.6.2",
