--- a/package.json
+++ b/package.json
@@ -13,25 +13,24 @@
     "less": "^4.2.0",
     "primeicons": "^6.0.1",
     "primereact": "^10.3.3",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-circular-progressbar": "^2.1.0",
     "react-datepicker": "^5.0.0",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
     "react-draggable": "^4.4.6",
     "react-grid-layout": "^1.4.4",
     "react-hotkeys-hook": "4.4.4",
     "react-resizable": "^3.0.5",
-    "react-resize-detector": "^10.0.0-beta.1",
-    "react-semantic-toasts": "^0.6.5",
+    "react-resize-detector": "^10.0.1",
     "react-table": "^7.8.0",
     "react-virtuoso": "^4.6.3",
+    "rehype-katex": "^7.0.0",
+    "remark-gfm": "^4.0.0",
+    "remark-math": "^6.0.0",
     "sass": "^1.70.0",
     "styled-components": "^6.1.8",
     "typescript": "^5.3.3",
-    "vite": "^5.0.12",
-    "rehype-katex": "^7.0.0",
-    "remark-gfm": "^4.0.0",
-    "remark-math": "^6.0.0"
+    "vite": "^5.0.12"
   }
 }
