new resize detector library

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@floating-ui/react": "^0.26.17",
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@react-hook/resize-observer": "^2.0.1",
     "@tanstack/react-table": "^8.17.3",
     "@tanstack/react-virtual": "v3.5.1",
     "@vitejs/plugin-react": "^4.3.1",
@@ -21,7 +22,6 @@
     "react-grid-layout": "^1.4.4",
     "react-hotkeys-hook": "4.5.0",
     "react-resizable": "^3.0.5",
-    "react-resize-detector": "^11.0.1",
     "react-table": "^7.8.0",
     "react-virtuoso": "^4.7.11",
     "rehype-katex": "^7.0.0",
