--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-draggable": "^4.5.0",
     "react-grid-layout": "^1.5.2",
     "react-hotkeys-hook": "5.2.1",
+    "react-markdown": "10.1.0",
     "react-resizable": "^3.0.5",
     "react-table": "^7.8.0",
     "react-virtuoso": "^4.15.0",
